5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1764_674.log
== TEST (2019-05-21 17:51:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
v = array(eval(input('quantidade: ')))
print(size(v))
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v))
-- ERROR:
File "XXXX", line 10
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:52:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
v = array(eval(input('quantidade: ')))
print(size(v))
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:53:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *
v = array(eval(input()))
print(size(v))
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:53:52) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:56:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v) / size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:04:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(mean(v)size(v)))
-- ERROR:
File "XXXX", line 12
    print(round(mean(v)size(v)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:04:49) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)size(v)))
-- ERROR:
File "XXXX", line 12
    print(round(sum(v)size(v)))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:05:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(mean(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:08:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
0.394908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
0.484937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
1.51011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.11603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.15429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.71889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
3.17494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
3.23153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:09:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.45062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.32514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.26601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
1.804
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:09:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(sum(v)/size(v,2)))
-- EXECUTION TIME:
2.4369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/674/main.py", line 12, in <module>
    print(round(sum(v)/size(v,2)))
  File "/usr/local/lib/python3.4/dist-packages/numpy/core/fromnumeric.py", line 2931, in size
    return a.shape[axis]
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 16:12:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
a = sum(v)/size(v)
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(a,2))
-- EXECUTION TIME:
0.486846
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:00:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import *

v = array(eval(input()))
a = sum(v)/size(v)
print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))
print(round(a,2))
-- EXECUTION TIME:
0.370196
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
